--- a/generator/base/templates/package.json
+++ b/generator/base/templates/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^1.0.2",
     "lodash": "^4.17.4",
     "vue": "^2.5.2",
+    "vue-input-tag": "^1.0.6",
     "vue-meta": "^1.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
